ajuste, adicionado router in page

--- a/src/app/modules/pages/pages/pages.component.html
+++ b/src/app/modules/pages/pages/pages.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <app-side-nav></app-side-nav>
   <div class="content-wrapper">
-    <app-aluno></app-aluno>
+    <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
 </div>
