--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -14,14 +14,14 @@
         <li class="dropdown user user-menu">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
             <img alt="User Image" class="user-image" src="assets/dist/img/user2-160x160.jpg">
-            <span class="hidden-xs">Alexander Pierce</span>
+            <span class="hidden-xs">Diego Cugiki</span>
           </a>
           <ul class="dropdown-menu">
             <li class="user-header">
               <img alt="User Image" class="img-circle" src="assets/dist/img/user2-160x160.jpg">
 
               <p>
-                Alexander Pierce - Web Developer
+                Diego Cugiki - Web Developer
                 <small>Member since Nov. 2012</small>
               </p>
             </li>
