--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,49 +1,33 @@
 <div class="login-box">
   <div class="login-logo">
-    <a href="#"><b>Admin</b>LTE</a>
+    <a href="#"><b>Apex</b>Escola</a>
   </div>
-  <!-- /.login-logo -->
   <div class="login-box-body">
-    <p class="login-box-msg">Sign in to start your session</p>
-
+    <p class="login-box-msg">Entrar</p>
 
       <div class="form-group has-feedback">
         <input class="form-control" placeholder="Email" type="email">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input class="form-control" placeholder="Password" type="password">
+        <input class="form-control" placeholder="Senha" type="password">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="row">
         <div class="col-xs-8">
           <div class="checkbox icheck">
             <label>
-              <input type="checkbox"> Remember Me
+              <input type="checkbox"> Salvar minhas credênciais
             </label>
           </div>
         </div>
-        <!-- /.col -->
         <div class="col-xs-4">
-          <button [routerLink]="'/members'" class="btn btn-primary btn-block btn-flat">Sign In</button>
+          <button [routerLink]="'/members'" class="btn btn-primary btn-block btn-flat">Entrar</button>
         </div>
-        <!-- /.col -->
       </div>
-
-
-    <div class="social-auth-links text-center">
-      <p>- OR -</p>
-      <a class="btn btn-block btn-social btn-facebook btn-flat" href="#"><i class="fa fa-facebook"></i> Sign in using
-        Facebook</a>
-      <a class="btn btn-block btn-social btn-google btn-flat" href="#"><i class="fa fa-google-plus"></i> Sign in using
-        Google+</a>
-    </div>
-    <!-- /.social-auth-links -->
-
-    <a href="#">I forgot my password</a><br>
-    <a [routerLink]="'/login/register'" class="text-center">Register a new membership</a>
+      <br>
+    <a href="#">Esqueceu a senha?</a><br>
+    <a [routerLink]="'/login/register'" class="text-center">Cadastre-se</a>
 
   </div>
-  <!-- /.login-box-body -->
 </div>
-<!-- /.login-box -->
