--- a/src/app/modules/layout/side-nav/side-nav.component.html
+++ b/src/app/modules/layout/side-nav/side-nav.component.html
@@ -18,7 +18,8 @@
           </span>
         </a>
         <ul class="treeview-menu">
-          <li><a routerLink="alunos"><i class="fa fa-circle-o"></i> Alunos</a></li>
+          <li><a [routerLink]="'/alunos'"><i class="fa fa-user-o"></i> Alunos</a></li>
+          <li><a [routerLink]="'/professores'"><i class="fa fa-commenting"></i> Professores</a></li>
         </ul>
       </li>
       <li><a ><i class="fa fa-book"></i> <span>Exemplo</span></a></li>
